[package]
name = "monitor_util"
version = "0.1.0"
authors = ["Haim Gelfenbeyn <haim@g8n.me>"]
edition = "2018"
description = "An utility to watch for USB device connect/disconnect events and switch display inputs via DDC/CI"
readme = "README.md"
repository = "https://github.com/haimgel/display-switch/"
license = "MIT"

[dependencies]
ddc = { version = "^0.2.0" }
ddc-winapi = { git = "https://github.com/arcnmx/ddc-winapi-rs", branch = "master" }
web-view = { version = "0.7", features = ["edge"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json="1.0"
widestring = "^0.3.0"
regex="1"
